# 5907-scouting-api

./: .gitignore  Cargo.toml  README.md  askama.toml
defaults/: event.json  game-configs.json  teams.json
src/: auth.rs  bytes.rs  datatypes.rs  forms.rs  main.rs  misc.rs  schedules.rs  settings.rs  state.rs  storage_manager.rs  sync.rs  templates.rs  transactions.rs
src/data/: db_layer.rs  mod.rs  paged.rs  template.rs
src/endpoints/: bytes.rs  forms.rs  mod.rs  schedules.rs  scouters.rs  shifts.rs  templates.rs
src/logic/: messages.rs  mod.rs  syncing.rs
src/ui/: mod.rs  state.rs
static/htmx/: alt-key-row.html  alt-key-search.html  index.html  search-page.html  transaction-history.html
templates/: 2023_CHARGED_UP.json  test.json
