[package]
name = "cc-shambots-scouting-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.1", features = ["fs"] }
anyhow = "1.0.71"
actix-cors = "0.6.4"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"]}
bincode = "2.0.0-rc.3"
sled = "0.34.7"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng" ] }
derive_more = "0.99.17"
log = "0.4.18"
