[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tracing", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "query", "typed-header"] }
#axum-server = {  features = ["tls-rustls"], git = "https://github.com/programatik29/axum-server.git", branch = "master"}
axum-server = { features = ["tls-rustls"], version = "0.6" }
tower-http = { version = "0.5.0", features = ["full", "cors"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-otel-metrics = "0.8"
tracing-opentelemetry = "0.22"
opentelemetry-jaeger = "0.20"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
opentelemetry = "0.21"
rand = "0.8"
oauth2 = "4.4"
serde = "1.0"
jwt-simple = { version = "0.12", features = ["pure-rust"], default-features = false }
reqwest = { version = "0.11", features = ["json", "serde_json"] }
config = "0.13"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
sha256 = "1.4.0"
anyhow = "1.0.77"
serde_json = "1.0.108"
glob = "0.3.1"
tokio-util = { version = "0.7.10", features = ["full"] }
totp-rs = "5.4.0"
data-encoding = "2.5.0"
chrono = "0.4.31"
datafusion = "34.0.0"
object_store = "0.9.0"
kv = "0.24.0"
futures = "0.3.30"
sqlx = { version = "0.7.3", features = ["uuid", "sqlite"] }
